Update default colors

--- a/public/assets/src/scss/wps-breaking-news-plugin.scss
+++ b/public/assets/src/scss/wps-breaking-news-plugin.scss
@@ -1,8 +1,8 @@
 .wps-bn-block{
   display:block;
   padding:12px;
-  color:var(--breaking-news-text-color,#000000);
-  background-color:var(--breaking-news-background-color,#f5f5f5);
+  color:var(--breaking-news-text-color,#ffffff);
+  background-color:var(--breaking-news-background-color,#dd3333);
   z-index:999999;
   position: relative;
 
